RWA-2213: Add filter signature