@@ -3,9 +3,11 @@ package uk.gov.hmcts.reform.wataskmanagementapi.controllers.request;
 import org.springframework.util.CollectionUtils;
 import org.springframework.util.StringUtils;
 import org.zalando.problem.violations.Violation;
+import uk.gov.hmcts.reform.wataskmanagementapi.auth.role.entities.enums.RoleCategory;
 import uk.gov.hmcts.reform.wataskmanagementapi.cft.enums.CFTTaskState;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.RequestContext;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.SearchRequest;
+import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.SortingParameter;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterBoolean;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterKey;
 import uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.SearchParameterList;
@@ -13,7 +15,6 @@ import uk.gov.hmcts.reform.wataskmanagementapi.exceptions.v2.validation.CustomCo
 
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.EnumMap;
 import java.util.List;
 import java.util.Locale;
@@ -32,15 +33,15 @@ import static uk.gov.hmcts.reform.wataskmanagementapi.domain.search.parameter.Se
 
 public final class SearchTaskRequestMapper {
 
+    public static final List<String> ALLOWED_WORK_TYPES = List.of(
+        "hearing_work", "upper_tribunal", "routine_work", "decision_making_work",
+        "applications", "priority", "access_requests", "error_management",
+        "review_case", "evidence", "follow_up"
+    );
+
     private SearchTaskRequestMapper() {
         //Utility class constructor
     }
-
-    public static final List<String> ALLOWED_WORK_TYPES = List.of(
-            "hearing_work", "upper_tribunal", "routine_work", "decision_making_work",
-            "applications", "priority", "access_requests", "error_management",
-            "review_case", "evidence", "follow_up"
-    );
 
     public static SearchRequest map(SearchTaskRequest clientRequest, boolean isGranularPermissionEnabled) {
         final EnumMap<SearchParameterKey, SearchParameterList> keyMap = asEnumMapForListOfStrings(clientRequest);
@@ -62,9 +63,10 @@ public final class SearchTaskRequestMapper {
         }
         final SearchParameterList userParam = keyMap.get(USER);
         final SearchParameterList workTypeParam = keyMap.get(WORK_TYPE);
-        List<String> workTypes = workTypeParam == null ? Collections.emptyList() : workTypeParam.getValues();
+        List<String> workTypes = getValueOrEmpty(workTypeParam);
         final SearchParameterList roleCtgParam = keyMap.get(ROLE_CATEGORY);
         final SearchParameterList taskTypeParam = keyMap.get(TASK_TYPE);
+        final List<SortingParameter> sortingParameters = clientRequest.getSortingParameters();
 
         validateRequest(clientRequest, workTypes, isGranularPermissionEnabled);
 
@@ -72,14 +74,14 @@ public final class SearchTaskRequestMapper {
             .requestContext(clientRequest.getRequestContext())
             .availableTasksOnly(availableTasksOnly)
             .cftTaskStates(cftTaskStates)
-            .jurisdictions(jurisdictionParam == null ? List.of() : jurisdictionParam.getValues())
-            .locations(locationParam == null ? Collections.emptyList() : locationParam.getValues())
-            .caseIds(caseIdParam == null ? Collections.emptyList() : caseIdParam.getValues())
-            .users(userParam == null ? Collections.emptyList() : userParam.getValues())
+            .jurisdictions(getValueOrEmpty(jurisdictionParam))
+            .locations(getValueOrEmpty(locationParam))
+            .caseIds(getValueOrEmpty(caseIdParam))
+            .users(getValueOrEmpty(userParam))
             .workTypes(workTypes)
-            .roleCategories(roleCtgParam == null ? Collections.emptyList() : roleCtgParam.getValues())
-            .taskTypes(taskTypeParam == null ? Collections.emptyList() : taskTypeParam.getValues())
-            .sortingParameters(clientRequest.getSortingParameters())
+            .roleCategories(getRoleCategory(roleCtgParam))
+            .taskTypes(getValueOrEmpty(taskTypeParam))
+            .sortingParameters(sortingParameters == null ? List.of() : sortingParameters)
             .build();
     }
 
@@ -139,22 +141,21 @@ public final class SearchTaskRequestMapper {
     }
 
     private static List<CFTTaskState> getCftTaskStates(SearchParameterList stateParam) {
-        List<CFTTaskState> cftTaskStates = new ArrayList<>();
-        if (stateParam != null) {
-            final List<String> values = stateParam.getValues();
-            if (!values.isEmpty()) {
-                cftTaskStates = values.stream()
-                        .filter(StringUtils::hasText)
-                        .map(value -> CFTTaskState.valueOf(value.toUpperCase(Locale.ROOT)))
-                        .collect(Collectors.toList());
-            }
-        }
-        return cftTaskStates;
+        return getValueOrEmpty(stateParam).stream()
+            .filter(StringUtils::hasText)
+            .map(value -> CFTTaskState.valueOf(value.toUpperCase(Locale.ROOT)))
+            .collect(Collectors.toList());
+    }
+
+    private static List<RoleCategory> getRoleCategory(SearchParameterList roleCtgParam) {
+        return getValueOrEmpty(roleCtgParam).stream()
+            .filter(StringUtils::hasText)
+            .map(value -> RoleCategory.valueOf(value.toUpperCase(Locale.ROOT)))
+            .collect(Collectors.toList());
     }
 
     private static EnumMap<SearchParameterKey, SearchParameterList> asEnumMapForListOfStrings(
-            SearchTaskRequest searchTaskRequest) {
-
+        SearchTaskRequest searchTaskRequest) {
         EnumMap<SearchParameterKey, SearchParameterList> map = new EnumMap<>(SearchParameterKey.class);
         if (searchTaskRequest != null && searchTaskRequest.getSearchParameters() != null) {
             searchTaskRequest.getSearchParameters()
@@ -162,7 +163,10 @@ public final class SearchTaskRequestMapper {
                     .filter(SearchParameterList.class::isInstance)
                     .forEach(request -> map.put(request.getKey(), (SearchParameterList) request));
         }
-
         return map;
+    }
+
+    private static List<String> getValueOrEmpty(SearchParameterList parameterList) {
+        return parameterList == null ? List.of() : parameterList.getValues();
     }
 }
